--- a/templates/model-footer.html
+++ b/templates/model-footer.html
@@ -1,1 +1,9 @@
+<head>
+    <style>
+        p {
+         font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
+</head>
+
 <p>Desenvolvido por Lucas Neves</p>
