--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -1,3 +1,24 @@
+<head>
+    <style>
+  html {
+   background-color: lightblue;
+   font-family: Arial, Helvetica, sans-serif;
+  }
+
+  button {
+  background-color: #4CAF50; /* Green */
+  border-radius:10px;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+}
+    </style>
+</head>
+
 {% extends "model-page.html" %}
 
 {% block content %}
