--- a/templates/evento.html
+++ b/templates/evento.html
@@ -1,3 +1,39 @@
+<head>
+    <style>
+   html {
+   background-color: lightblue;
+   font-family: Arial, Helvetica, sans-serif;
+   }
+
+   .hidden{
+   display:none;
+   }
+
+
+  input{
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border-radius:10px;
+  color: white;
+  padding: 15px 35px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+    </style>
+</head>
+
 {% extends "model-page.html" %}
 
 {% block content %}
@@ -6,7 +42,7 @@
 
 <form action="submit" method="POST">{% csrf_token %}
     <label>Título</label>
-    <input type="number" name="id_evento" value="{{ evento.id }}" hidden>
+    <input class="hidden" type="number" name="id_evento" value="{{ evento.id }}"hidden>
     <br>
     <input type="text" name="titulo" size="23" value="{{ evento.titulo }}">
     <br>
