--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -1,6 +1,18 @@
-
+<head>
     <meta charset="UTF-8">
+    <style>
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    }
+
+a {
+text-decoration:none;
+color:black;
+
+}
+    </style>
     <title>Agenda</title>
+    </head>
     <div align="right">
         <a href="/logout">Logout</a>
     </div>
